Fixed distortion on search result page

--- a/main.css
+++ b/main.css
@@ -123,6 +123,7 @@ body {
     max-width: 400px;
     height: auto;
     max-height: 300px;
+    margin-bottom: 2em;
 }
 .products:visited {
     color: black;
